--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>笔记</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<meta property="og:type" content="website">
-		<meta property="og:url" content="http://yoursite.com/index.html">
-		<link href="src/css/main.css" rel="stylesheet">
-	</head>
-	<body>
-		<h2>曾: 每天进步一点点；小王: 让我们变得更强</h2>
-		<script src="src/js/main.js" type="module"></script>
-	</body>
+    <head>
+        <title>练习站点</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, maximum-scale=1"
+        />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="http://yoursite.com/index.html" />
+        <link href="src/css/main.css" rel="stylesheet" />
+    </head>
+    <body>
+        <h2>曾: 每天进步一点点；小王: 让我们变得更强</h2>
+        <nav>
+            <ol>
+                <li class="crumb">
+                    <a href="/">首页</a>
+                </li>
+                <li class="crumb">
+                    <a href="dist/react/index.html">react 页</a>
+                </li>
+                <li class="crumb">
+                    <a href="dist/vue/index.html">vue 页</a>
+                </li>
+                <li class="crumb">
+                    <a href="dist/js/index.html">js 功能页</a>
+                </li>
+            </ol>
+        </nav>
+        <script src="src/js/main.js" type="module"></script>
+    </body>
 </html>
