--- a/src/test.animation.html
+++ b/src/test.animation.html
@@ -27,6 +27,7 @@
             </div>
         </div>
     </div>
+    <div class="reduce">当前弱动画模式</div>
     <script>
         $(".bbt").on("click", function () {
             $(".node").each(function (index, node) {
